Subida inicial del proyecto de conversor de moneda